# patients-data-manager

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  application.cpp  application.h  date.cpp  date.h  patient.cpp  patient.h  patients_data.json  util.h
src/io/: CMakeLists.txt  io.cpp  io.h
src/io/adapters/: patient-json-adapter.cpp  patient-json-adapter.h  patients_data.json
src/operations/: CMakeLists.txt  add_new_patient.cpp  display_patient_details.cpp  operations.h  search_by_name.cpp  sort_by_field.cpp  util.cpp
src/types/: CMakeLists.txt  date.cpp  date.h  patient.cpp  patient.h  util.h
